# nsbox

./: .dockerignore  .flake8  Dockerfile  Makefile  NOTICE  README.md  deployment.yaml  docker-compose.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: build.yaml  deploy.yaml  sentry_release.yaml  test.yaml
config/: gunicorn.conf.py  nsbox_cs.cfg  nsbox_js.cfg  nsbox_py.cfg
nsbox/: __init__.py  __main__.py  memfs.py  nsjail.py  process.py
nsbox/api/: __init__.py  nsboxapi.py
nsbox/api/resources/: eval.py
nsbox/utils/: cgroup.py  gunicorn.py  logging.py  swap.py
requirements/: requirements.pip
scripts/: protoc.py
tests/: gunicorn_utils.py  test_filesystem.py  test_integration.py  test_main.py  test_memfs.py  test_nsjail.py  test_snekio.py  test_timed.py
tests/api/: __init__.py  test_eval.py
